--- a/Systems-Research.html
+++ b/Systems-Research.html
@@ -5,7 +5,7 @@
     <title>DATA SCIENCE AND SYSTEM RESEARCH | ICDDS</title>
     <meta
       name="keywords"
-      content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
+      content="International Conference on Data Decision and Systems, ICDDS 2024, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
     />
     <meta
       content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
@@ -132,9 +132,9 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li> -->
 
-            <li>
+            <!-- <li>
               <a href="#">Workshops</a>
               <ul class="nav-dropdown">
                 <li><a href="smartcity.html">Smart City Stack workshop</a></li>
@@ -147,18 +147,18 @@
               </ul>
             </li>
 
-            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="speakers.html">Speakers</a></li> -->
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
 
-            <li>
+            <!-- <li>
               <a href="#">Archives</a>
 
               <ul class="nav-dropdown">
                 <li><a href="2022.html">2022</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href="registration.html">Registration</a></li>
           </ul>
         </nav>
@@ -236,16 +236,15 @@
         <!--<h3>Important Dates!</h3>
       <p>To be updated soon!</p>-->
 
-        <p class="para">
-          <strong>Important Dates : </strong><br />
-          <strong>Paper Submission Starts:</strong> June 15, 2023<br />
-          <strong>Paper Submission Deadline:</strong
-          ><s> July 15, 2023</s> August 11, 2023 (Hard Deadline)<br />
-          <strong>Final Notification:</strong> September 30, 2023<br />
-          <strong>Camera Ready Submission:</strong> October 20, 2023<br />
-          <strong>Registration Due:</strong> November 1, 2023<br />
-          <strong>Venue :</strong> NITK, Surathkal
-        </p>
+      <p class="para">
+        <strong>Important Dates : </strong><br>
+        <strong>Abstract Submission Starts:</strong> June 15, 2024<br>
+        <strong>Paper Submission Deadline:</strong> July 15, 2024<br>
+        <strong>Final Notification:</strong> September 30, 2024<br>
+        <strong>Camera Ready Submission:</strong> October 20, 2024<br>
+        <strong>Registration Due:</strong> November 1, 2024<br>
+        <strong>Venue :</strong> PES University, Bengaluru
+      </p>
 
         <!--<strong>Important Dates : </strong><br>
         <strong>Abstract Submission :</strong> September 17, 2022 <br>
@@ -255,18 +254,18 @@
         <strong>Venue :</strong> BMS College Of Engineering, Bangalore-->
 
         <br />
-        <p class="para1">
+        <!-- <p class="para1">
           <strong>Paper Submission link :</strong>
           <a
             href="https://cmt3.research.microsoft.com/ICDDS2023"
             target="_blank"
             >CMT</a
           >
-        </p>
+        </p> -->
         <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
         <br /><br />
       </div>
-      <div class="col-md-2">
+      <!-- <div class="col-md-2">
         <br />
         <center><h2 style="font-size: x-large">Sponsors</h2></center>
         <img
@@ -284,7 +283,7 @@
           class="partners"
         />
         <img src="img/ericsson.png" alt="" width="100%" height="150px" />
-      </div>
+      </div> -->
 
       <!--<div class="col-md-2">
       <br>
@@ -346,7 +345,7 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; 2023 <a href="https://www.icdds.org">ICDDS</a>. All Rights
+          &copy; 2024 <a href="https://www.icdds.org">ICDDS</a>. All Rights
           Reserved.<br />
           Organized By
           <a href="https://www.cs.ieeebangalore.org/"
