--- a/Technical-Committee.html
+++ b/Technical-Committee.html
@@ -5,7 +5,7 @@
     <title>Technical Program Committee | ICDDS</title>
     <meta
       name="keywords"
-      content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
+      content="International Conference on Data Decision and Systems, ICDDS 2024, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
     />
     <meta
       content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
@@ -150,9 +150,9 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li> -->
 
-            <li>
+            <!-- <li>
               <a href="#">Workshops</a>
               <ul class="nav-dropdown">
                 <li><a href="smartcity.html">Smart City Stack workshop</a></li>
@@ -165,18 +165,18 @@
               </ul>
             </li>
 
-            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="speakers.html">Speakers</a></li> -->
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
 
-            <li>
+            <!-- <li>
               <a href="#">Archives</a>
 
               <ul class="nav-dropdown">
                 <li><a href="2022.html">2022</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href="registration.html">Registration</a></li>
           </ul>
         </nav>
@@ -215,7 +215,7 @@
       </div>
     </section>
 
-    <table class="center">
+    <!-- <table class="center">
       <tr>
         <th>Name</th>
         <th>Affiliation</th>
@@ -672,7 +672,7 @@
         <td>Yukata Watanobe</td>
         <td>The University of Aizu, Japan</td>
       </tr>
-    </table>
+    </table> -->
 
     <footer id="footer">
       <div class="footer-top">
@@ -713,7 +713,7 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; 2023 <a href="https://www.icdds.org">ICDDS</a>. All Rights
+          &copy; 2024 <a href="https://www.icdds.org">ICDDS</a>. All Rights
           Reserved.<br />
           Organized By
           <a href="https://www.cs.ieeebangalore.org/"
