--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Contact | ICDDS</title>
-    <meta name="keywords" content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, " >
+    <meta name="keywords" content="International Conference on Data Decision and Systems, ICDDS 2024, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, " >
     <meta content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
     ICDDS’23 aims to look broadly at data based innovation and technologies in interdisciplinary areas. The conference considers all aspects of data and decision science, applications, solution design and system challenges in all such new paradigms ranging from theory to applied research." name="description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
@@ -92,7 +92,7 @@
                             <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                         </ul>
                     </li>
-                    <li><a href="Program-Schedule.html">Program Schedule</a></li>
+                    <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
 
                     <li><a href="#">Workshops</a>
@@ -103,17 +103,17 @@
                         </ul></li>
 
 
-                    <li><a href="speakers.html">Speakers</a></li>
+                    <li><a href="speakers.html">Speakers</a></li> -->
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
                     
-                        <li><a href="#">Archives</a>
+                        <!-- <li><a href="#">Archives</a>
 
                             <ul class="nav-dropdown">
                                 <li><a href="2022.html">2022</a></li>
                             </ul>
-                            </li>
+                            </li> -->
                     <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
@@ -155,7 +155,7 @@
             <div class="section-header">
                 <h3>Contact</h3>
             </div>
-            <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p>
+            <!-- <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p> -->
             <!-- <div class="row">
 
 
@@ -228,7 +228,7 @@
 
         <div class="container">
             <div class="copyright">
-                &copy; 2023 <a href="https://www.icdds.org">ICDDS</a>. All Rights Reserved.<br>
+                &copy; 2024 <a href="https://www.icdds.org">ICDDS</a>. All Rights Reserved.<br>
                 Organized By <a href="https://www.cs.ieeebangalore.org/">IEEE Computer Society Banglore Chapter</a>
             </div>
         </div>
