--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
     <title>Registration | ICDDS</title>
     <meta
       name="keywords"
-      content="International Conference on Data Decision and Systems, ICDDS 2023, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
+      content="International Conference on Data Decision and Systems, ICDDS 2024, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, "
     />
     <meta
       content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
@@ -125,7 +125,7 @@
                 <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
               </ul>
             </li>
-            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li>
 
             <li>
               <a href="#">Workshops</a>
@@ -140,18 +140,18 @@
               </ul>
             </li>
 
-            <li><a href="speakers.html">Speakers</a></li>
+            <li><a href="speakers.html">Speakers</a></li> -->
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
 
-            <li>
+            <!-- <li>
               <a href="#">Archives</a>
 
               <ul class="nav-dropdown">
                 <li><a href="2022.html">2022</a></li>
               </ul>
-            </li>
+            </li> -->
             <li><a href="registration.html">Registration</a></li>
           </ul>
         </nav>
@@ -188,7 +188,7 @@
       </div>
     </section>
     <!-- Banner Section end -->
-    <h1 style="text-align: center; margin-top: 2%">Registration</h1>
+    <!-- <h1 style="text-align: center; margin-top: 2%">Registration</h1>
     <table style="margin: auto; margin-bottom: 100px; padding: 10px">
       <thead>
         <tr>
@@ -245,7 +245,7 @@
           <td>$75</td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
     <!-- Contact Section Start -->
     <!--
         2022 Registration Page 
@@ -328,7 +328,7 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; 2023 <a href="https://www.icdds.org">ICDDS</a>. All Rights
+          &copy; 2024 <a href="https://www.icdds.org">ICDDS</a>. All Rights
           Reserved.<br />
           Organized By
           <a href="https://www.cs.ieeebangalore.org/"
