--- a/AuthorGuide.html
+++ b/AuthorGuide.html
@@ -99,28 +99,28 @@
                     <li><a href="AuthorGuide.html">Author's Guidelines</a></li>
                 </ul>
             </li>
-            <li><a href="Program-Schedule.html">Program Schedule</a></li>
+            <!-- <li><a href="Program-Schedule.html">Program Schedule</a></li> -->
 
 
-            <li><a href="#">Workshops</a>
+            <!-- <li><a href="#">Workshops</a>
                 <ul class="nav-dropdown">
                     <li><a href="smartcity.html">Smart City Stack workshop</a></li>
                     <li><a href="girlgeekhack.html">GirlGeekHack'23 (Mangalore Subsection Edition)</a></li>
                     <li><a href="studentcongress.html">CS Student Congress</a></li>
-                </ul></li>
+                </ul></li> -->
 
 
-            <li><a href="speakers.html">Speakers</a></li>
+            <!-- <li><a href="speakers.html">Speakers</a></li> -->
             <li><a href="venue.html">Venue</a></li>
             <!-- <li><a href="ticket.html">Tickets</a></li> -->
             <li><a href="contact.html">Contact</a></li>
             
-                <li><a href="#">Archives</a>
+                <!-- <li><a href="#">Archives</a>
 
                     <ul class="nav-dropdown">
                         <li><a href="2022.html">2022</a></li>
                     </ul>
-                    </li>
+                    </li> -->
             <li><a href="registration.html">Registration</a></li>
         </ul>
     </nav><!-- #nav-menu-container -->
@@ -205,13 +205,13 @@
       <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
       <br><br>
     </div>
-    <div class="col-md-2">
+    <!-- <div class="col-md-2">
       <br>
       <center><h2 style="font-size: x-large;">Sponsors</h2></center>
       <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
       <img src="img/Bosch_symbol_logo_black_red.svg" alt=""  width = "100%" height = "150px" class="partners">
                             <img src="img/ericsson.png" alt="" width="100%" height="150px">
-    </div>
+    </div> -->
 
     <!--<div class="col-md-2">
       <br>
@@ -257,7 +257,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; 2023 <a href="https://www.icdds.org">ICDDS</a>. All Rights Reserved.<br>
+        &copy; 2024 <a href="https://www.icdds.org">ICDDS</a>. All Rights Reserved.<br>
         Organized By <a href="https://www.cs.ieeebangalore.org/">IEEE Computer Society Banglore Chapter</a>
       </div>
     </div>
