--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -168,17 +168,24 @@
                             <p class="position">UNSW Sydney, Australia</p>
                         </div>
                         <div>
+                            <img src="img/kesh.jpg" width="250px" height="250px">
+                            <a href="https://staff.pes.edu/nm1002/" style="text-decoration: none;" target="_blank"><p class="commitee-names">Keshavan B K</p></a>
+                            <p class="position">PES University, Bangalore, India
+                            </p>
+                        </div>
+                        <br>
+                        <div>
                             <img src="img/sud.jpg" width="250px" height="250px">
                             <a href="https://staff.pes.edu/nm1107/" style="text-decoration: none;" target="_blank"><p class="commitee-names">TSB Sudarshan</p></a>
                             <p class="position">PES University, Bangalore, India
                             </p>
                         </div>
                         <div>
-                            <img src="img/kesh.jpg" width="250px" height="250px">
-                            <a href="https://staff.pes.edu/nm1002/" style="text-decoration: none;" target="_blank"><p class="commitee-names">Keshavan B K</p></a>
-                            <p class="position">PES University, Bangalore, India
+                            <img src="img/snehanshu.jpg" width="250px" height="250px">
+                            <a href="https://www.bits-pilani.ac.in/goa/snehanshu-saha/" style="text-decoration: none;" target="_blank"><p class="commitee-names">Snehanshu Saha</p></a>
+                            <p class="position">BITS Goa Campus, India
                             </p>
-                        </div>
+                        </div>                       
                     </div>
 
                 </div>
