Beautified committee page

--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -163,25 +163,24 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/sah.jpg"
-                                width="250px" height="250px">
+                                 class="org-img">
                             <a href="https://www.unsw.edu.au/staff/salil-kanhere" style="text-decoration: none;" target="_blank"><p class="commitee-names">Prof. Salil Kanhere</p></a>
                             <p class="position">UNSW Sydney, Australia</p>
                         </div>
                         <div>
-                            <img src="img/kesh.jpg" width="250px" height="250px">
+                            <img src="img/kesh.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1002/" style="text-decoration: none;" target="_blank"><p class="commitee-names">Keshavan B K</p></a>
                             <p class="position">PES University, Bangalore, India
                             </p>
                         </div>
-                        <br>
                         <div>
-                            <img src="img/sud.jpg" width="250px" height="250px">
+                            <img src="img/sud.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1107/" style="text-decoration: none;" target="_blank"><p class="commitee-names">TSB Sudarshan</p></a>
                             <p class="position">PES University, Bangalore, India
                             </p>
-                        </div>
+                        </div> 
                         <div>
-                            <img src="img/snehanshu.jpg" width="250px" height="250px">
+                            <img src="img/snehanshu.jpg"  class="org-img">
                             <a href="https://www.bits-pilani.ac.in/goa/snehanshu-saha/" style="text-decoration: none;" target="_blank"><p class="commitee-names">Snehanshu Saha</p></a>
                             <p class="position">BITS Goa Campus, India
                             </p>
@@ -199,17 +198,17 @@
                     <div class="image-holder">
                         <div>
 
-                            <img src="img/dd.jpg" width="250px" height="250px">
+                            <img src="img/dd.jpg"  class="org-img">
                             <a href="https://www.linkedin.com/in/dilipkumardalei" target="_blank"><p class="commitee-names">Dilip Dalei</p></a>
                             <p class="position">DRDO, India</p>
                         </div>
                         <div>
-                            <img src="img/kantiaddya.jpg" width="250px" height="250px">
-                            <a href="https://souravkaddya.in/" target="_blank"><p class="commitee-names">Sourav Kanti Addya,</p></a>
+                            <img src="img/kantiaddya.jpg"  class="org-img">
+                            <a href="https://souravkaddya.in/" target="_blank"><p class="commitee-names">Sourav Kanti Addya</p></a>
                             <p class="position">National Institute of Technology Karnataka, Surathkal, India</p>
                         </div>
                         <div>
-                            <img src="img/ajay.jpg" width="250px" height="250px">
+                            <img src="img/ajay.jpg"  class="org-img">
                             <a href="https://www.linkedin.com/in/ajay-kattepur-801a056b/" target="_blank"><p class="commitee-names">Ajay Kattepur</p></a>
                             <p class="position">Ericsson Research, Bangalore, India</p>
                         </div>
@@ -225,12 +224,12 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/venu.jpg" width="250px" height="250px">
+                            <img src="img/venu.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1007/" target="_blank"><p class="commitee-names">Venugopal N</p></a>
                             <p class="position">PES University, Bangalore, India</p>
                         </div>
                     </div>
-                    </img>
+                   
             </section>
 
             
@@ -241,8 +240,8 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/sindhu.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Sindhu Pai</p>
+                            <img src="img/sindhu.jpg"  class="org-img">
+                            <a href="https://staff.pes.edu/nm1206/" target="_blank"><p class="commitee-names">Sindhu Pai</p></a>
                             <p class="position">PES University, Bangalore, India</p>
                         </div>
                     </div>
@@ -257,7 +256,7 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/mat.jpg" width="250px" height="250px">
+                            <img src="img/mat.jpg" class="org-img">
                             <a href="https://www.linkedin.com/in/archana-mathur-88731958/" target="_blank"><p class="commitee-names"> Archana Mathur</p></a>
                             <p class="position">NMIT, Bangalore, India</p>
                         </div>
@@ -271,12 +270,12 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/Alok-Ranjan.jpg" width="250px" height="250px">
+                            <img src="img/Alok-Ranjan.jpg" class="org-img">
                             <a href="https://www.linkedin.com/in/alok-ranjan/?originalSubdomain=in" target="_blank"><p class="commitee-names">Alok Ranjan</p></a>
                             <p class="position">Bosch, India</p>
                         </div>
                         <div>
-                            <img src="img/sb.jpg" width="250px" height="250px">
+                            <img src="img/sb.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1310/" target="_blank"><p class="commitee-names">Adithya Balasubramanyam</p></a>
                             <p class="position">PES University, Bangalore, India</p>
                         </div>
@@ -286,17 +285,17 @@
                     </header>
                     <div class="image-holder">
                         <div>
-                            <img src="img/sandeepkumar.jpg" width="250px" height="250px">
+                            <img src="img/sandeepkumar.jpg"  class="org-img">
                             <a href="https://www.linkedin.com/in/dr-sandeep-kumar-poonia-2626b64b" target="_blank"><p class="commitee-names">Sandeep Kumar</p></a>
                             <p class="position">Christ University</p>
                         </div>
                         <div>
-                            <img src="img/ashok.jpg" width="250px" height="250px">
+                            <img src="img/ashok.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1611/" target="_blank"><p class="commitee-names">Ashok Kumar</p></a>
                             <p class="position">PES University, Bangalore, India</p>
                         </div>
                         <div>
-                            <img src="img/mamta.jpg" width="250px" height="250px">
+                            <img src="img/mamta.jpg"  class="org-img">
                             <a href="https://staff.pes.edu/nm1089/" target="_blank"><p class="commitee-names">Mamatha H. R.</p></a>
                             <p class="position">PES University, Bangalore, India</p>
                         </div>
