Added and modified registration page

--- a/registration.html
+++ b/registration.html
@@ -188,7 +188,7 @@
       </div>
     </section>
     <!-- Banner Section end -->
-    <!-- <h1 style="text-align: center; margin-top: 2%">Registration</h1>
+    <h1 style="text-align: center; margin-top: 2%">Registration</h1>
     <table style="margin: auto; margin-bottom: 100px; padding: 10px">
       <thead>
         <tr>
@@ -218,34 +218,34 @@
         </tr>
         <tr style="text-align: center; padding: 10px">
           <td>Non-IEEE Student Member</td>
-          <td>₹5000</td>
-          <td>₹6250</td>
-          <td>$125</td>
-          <td>$175</td>
+          <td>₹6000</td>
+          <td>₹7500</td>
+          <td>$150</td>
+          <td>$200</td>
         </tr>
         <tr style="text-align: center; padding: 10px">
           <td>IEEE Professional Member</td>
-          <td>₹7200</td>
+          <td>₹7500</td>
           <td>₹9000</td>
           <td>$200</td>
           <td>$250</td>
         </tr>
         <tr style="text-align: center; padding: 10px">
           <td>Non-IEEE Professional Member</td>
-          <td>₹9000</td>
-          <td>₹11250</td>
-          <td>$225</td>
-          <td>$300</td>
+          <td>₹11000</td>
+          <td>₹13000</td>
+          <td>$250</td>
+          <td>$325</td>
         </tr>
         <tr style="text-align: center; padding: 10px">
           <td>Only Attending</td>
-          <td>₹2000</td>
+          <td>₹2500</td>
           <td>₹3000</td>
           <td>$50</td>
           <td>$75</td>
         </tr>
       </tbody>
-    </table> -->
+    </table>
     <!-- Contact Section Start -->
     <!--
         2022 Registration Page 
