--- a/AuthorGuide.html
+++ b/AuthorGuide.html
@@ -161,33 +161,52 @@
     <div class="col-md-8">
       <p class="para">
         <ol type="1">
-            <li>Prospective authors are invited to submit full papers of a minimum of 4 pages to maximum of 6 pages (A4 size). All papers submitted must follow the IEEE Conference format which can be downloaded from the following link.          (IEEE Paper Template in Word (A4) and Latex).  <a href="https://www.ieee.org/conferences/publishing/templates.html">Click Here For Format.</a>
-                The papers  should be submitted as a  PDF file only.
+            <li>Submitted papers must be original, unpublished and not considered elsewhere for
+              publication. Also, they must show a significant relevance to pervasive computing and
+              communications.
             </li>
             <br>
             <li>
-                Each paper must contain original and unpublished work that has not been submitted for other publication elsewhere.
-
+              All Submitted papers will undergo a rigorous review process handled by the Technical
+              Program Committee. Only electronic submissions in PDF format will be considered. Each
+              paper will be subjected to three or more reviews.
             </li>
             <br>
             <li>
-                The plagiarism of the submitted manuscript will be evaluated through the standard software as per IEEE guidelines.
+              Research papers must not <strong>exceed 6 pages </strong>(10pt font, 2-column format), including appendix,
+              acknowledgments and bibliography. Only electronic submissions in PDF format using the
+              <a href="https://www.ieee.org/conferences/publishing/templates.html)">IEEE Conference template </a>will be considered.
             </li>
             <br>
             <li>
                 <ol type="a">
-                    <li> All authors must register in CMT at the time of submission. <a href="https://cmtint.research.microsoft.com/User/Login?ReturnUrl=/BLUEHAT">Click Here</a></li>
-                    <li>The authors must not indicate/imply their names, affiliations, and acknowledgments in the body of the submitted paper. The authors only give their personal information during the   Microsoft CMT registration</li>
-                    <li> Addition or deletion of authors after the paper acceptance is not permitted.</li>
+                    <li><u>All authors' details must be entered in the CMT during the submission of the manuscript.</u> No
+                      extra author will be allowed to be added later if the manuscript is accepted.
+                    <li>Papers can be submitted under any of the three main topics listed above. Authors are required
+                      to make a primary topic selection, with optional secondary topics for each paper. The number
+                      of papers accepted under each topic is not capped. We will accept all papers that meet the
+                      high quality and innovation levels required by the ICDDS conference. Accepted papers will
+                      be submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore's scope and
+                      quality requirements.</li>
+                    <li>ICDDS 2024 will follow a <strong>double-blind review process</strong>. Author information should not
+                      appear in the manuscript. As a result, authors must make a good-faith effort to anonymize
+                      their submissions.</li>
 
                 </ol>
 
             </li>
             <br>
-            <li><b>A double-blind peer-review process will be followed to evaluate all papers submitted for the conference.</b></li>
-            <br><li>If a paper is accepted, at least one author needs to do full author registration and present the paper.</li>
-            <br><li>Every accepted paper has to be individually registered.</li>
-            <br><li>As per IEEE Policy, an author of every published paper needs to sign a copyright agreement. The instructions for the copyright agreement will be shared with the author after acceptance of paper.</li>
+            <li><b>All papers are subjected to the IEEE Plagiarism/AI-generated Text policy. <a href="https://conferences.ieeeauthorcenter.ieee.org/author-ethics/guidelines-and-policies/submission-policies/">Click here</a></b></li>
+            <br><li>All accepted papers <u>must be presented in person by one of the authors</u>, in addition to
+              having an associated full <a href="https://icdds.org/registration.html">registration</a>. Failure to comply
+              with this requirement will result in the exclusion of the paper from the final proceedings and
+              from the IEEE Digital Library, and the paper will not be eligible for the <strong>Best Paper Award.</strong></li>
+            <br><li>Accepted, registered and presented papers will be submitted to IEEE Xplore.</li>
+            <br><li>Authors must establish a CMT account with a username and password for carrying out all
+              activities starting from paper submission to presentation.</li>
+              <li>All papers must be submitted through the following Submission link: <a href="https://cmt3.research.microsoft.com/ICDDS2024">Click Here</a></li>
+              <li>Any deviation or non-compliance to the submission guidelines of ICDDS 2024 in any form
+                will lead to the rejection of the paper.</li>
         </ol>
       </p>
       
