--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -253,11 +253,12 @@
         </p>
         <p class="para">
           <strong>Important Dates : </strong><br>
-          <strong>Abstract Submission Starts:</strong> June 15, 2024<br>
-          <strong>Paper Submission Deadline:</strong> July 15, 2024<br>
-          <strong>Final Notification:</strong> September 30, 2024<br>
-          <strong>Camera Ready Submission:</strong> October 20, 2024<br>
+          <strong>Paper Submission Starts:</strong>May 15, 2024<br>
+          <strong>Full Paper Submission Deadline:</strong>June 30, 2024<br>
+          <strong>Notification of Acceptance:</strong>September 30, 2024<br>
+          <strong>Camera Ready Submission:</strong>October 20, 2024<br>
           <strong>Registration Due:</strong> November 1, 2024<br>
+          <strong>Conference Dates:</strong>December 5-7, 2024<br>
           <strong>Venue :</strong> PES University, Bengaluru
         </p>
         <br />
