--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
             <div class="section-header">
                 <h3>Contact</h3>
             </div>
-            <!-- <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p> -->
+            <p style="text-align: center;">For any query write an email to <a href="#">icdds2023@gmail.com</a></p>
             <!-- <div class="row">
 
 
